@@ -81,6 +81,13 @@ public:
     //
     bool unlock() const;
 
+    //
+    // Returns true if the mutex will unlock when calling unlock()
+    // (false otherwise). For non-recursive mutexes, this will always
+    // return true.
+    //
+    bool willUnlock() const;
+
 private:
 
     // noncopyable
@@ -248,6 +255,12 @@ Mutex::lock(LockState&) const
 }
 
 #endif    
+
+inline bool
+Mutex::willUnlock() const
+{
+    return true;
+}
 
 } // End namespace IceUtil
 
